# reklamito

./: .env.sample  .gitignore  Dockerfile  README.md  ch.sql  in.nginx  pyproject.toml
.github/workflows/: release.yml
ads/: admin.py  admin.py.old  apps.py  ch.py  models.py  permissions.py  redis.py  settings.py  urls.py  views.py
ads/admin/: __init__.py  banner.py  campaign.py  client.py
ads/migrations/: 0001_initial.py  0002_banner_click_url.py  0002_rename_company_user2client_client_campaign_author.py  0003_client_staff_alter_banner_campaign_and_more.py
billing/: models.py
billing/migrations/: 0001_initial.py
experiments/: models.py
experiments/migrations/: 0001_initial.py
myauth/: apps.py  forms.py  settings.py  views.py
project/: asgi.py  settings.py  urls.py
templates/admin/: login.html
templates/ads/: banner.html
templates/myauth/: signup.html
web/project/: .env.sample  settings.py  urls.py  wsgi.py
