[project]
name = "reklamito"
version = "0.1.0"
description = "serviso for la pubblicazione reklamitos su Interneto"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-driver>=0.2.9",
    "django>=5.2",
    "django-environ>=0.12.0",
    "django-json-widget>=2.0.1",
    "django-stubs-ext>=5.1.3",
    "django-types>=0.20.0",
    "httpagentparser>=1.9.5",
    "redis>=5.2.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "psycopg2>=2.9.10",
]
prod = [
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
default-groups = []
